<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:id="@+id/main"
    tools:context=".EyeglassesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contraintLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:padding="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/circle_indicator_outline_2" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:backgroundTint="@color/gray_blue"
                android:layout_height="3dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/circle_indicator_outline_1" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:backgroundTint="@color/gray_blue"
                android:layout_height="3dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/circle_indicator_outline_1" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:backgroundTint="@color/gray_blue"
                android:layout_height="3dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/circle_indicator_outline_1" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraintLayoutSingleVision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box_white"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/singleVisionImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/single_vision"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/singleVisionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:text="@string/single_vision_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintStart_toEndOf="@+id/singleVisionImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/singleVisionDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/single_vision_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/singleVisionImage"
                app:layout_constraintStart_toStartOf="@+id/singleVisionLabel"
                app:layout_constraintTop_toBottomOf="@+id/singleVisionLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintBifocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_box_white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraintLayoutTitle">

            <ImageView
                android:id="@+id/bifocalImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bifocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bifocalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bifocal_label"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintStart_toEndOf="@+id/bifocalImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bifocalDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/bifocal_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bifocalImage"
                app:layout_constraintStart_toStartOf="@+id/bifocalLabel"
                app:layout_constraintTop_toBottomOf="@+id/bifocalLabel" />

            <LinearLayout
                android:id="@+id/bifocalOptionsLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/black_semi_transparent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bifocalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:text="Bifocal"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:text="Or"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/progressiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:text="Progressive"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_box_white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraintLayoutTitle">

            <ImageView
                android:id="@+id/readingImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/readingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/reading_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintStart_toEndOf="@+id/readingImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/readingDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/reading_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/readingImage"
                app:layout_constraintStart_toStartOf="@+id/readingLabel"
                app:layout_constraintTop_toBottomOf="@+id/readingLabel" />

            <LinearLayout
                android:id="@+id/readingOptionsLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/black_semi_transparent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/prescriptionButton">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Prescription"
                        android:textSize="22sp"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Or"
                        android:layout_margin="30dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/readersButton">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reading"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="30dp"
                        android:textSize="20sp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraintLayoutNonPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box_white"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/nonPrescriptionImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/non_prescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nonPrescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/non_prescription_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintStart_toEndOf="@+id/nonPrescriptionImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nonPrecriptionDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/non_prescription_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nonPrescriptionImage"
                app:layout_constraintStart_toStartOf="@+id/nonPrescriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/nonPrescriptionLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
